--- a/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
+++ b/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
@@ -1,7 +1,7 @@
 <mat-card class="topHeader">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Reports For Kitchen</mat-card-title>
+    <mat-card-title>Reports For Kitchen Admin</mat-card-title>
     <mat-card-subtitle>report by categories</mat-card-subtitle>
   </mat-card-header>
 </mat-card>
@@ -16,14 +16,16 @@
           <div class="row">
             <div class="col col-md-2">
               <label for="fromDate" class="lead">ວັນທີ</label>
-              <div class="input-group mb-1">
-                <input matInput id="fromDate" [matDatepicker]="Frmpicker" class="form-control"
-                  placeholder="Choose a date" (dateInput)="dateEvent($event)">
-                <mat-datepicker-toggle matSuffix [for]="Frmpicker"></mat-datepicker-toggle>
-                <mat-datepicker #Frmpicker></mat-datepicker>
-              </div>
-            </div>
+              <form [formGroup]="dateFrom">
+                <div class="input-group mb-1">
 
+                  <input matInput id="fromDate" [matDatepicker]="Frmpicker" class="form-control"
+                    formControlName="initDate" placeholder="Choose a date" (dateInput)="dateEvent($event)">
+                  <mat-datepicker-toggle matSuffix [for]="Frmpicker"></mat-datepicker-toggle>
+                  <mat-datepicker #Frmpicker></mat-datepicker>
+                </div>
+              </form>
+            </div>
             <div class="col col-md-2">
               <label for="fromDate"></label>
               <div class="input-group mb-1">
@@ -34,16 +36,11 @@
           </div>
         </div>
       </div>
-
-
-
       <div class="mainReportDetail" [ngClass]="viewReport">
         <div class="card">
           <div class="card-header">
-            <div class="lead">
+            <div class="lead ">
               ລາຍງານຍອດຂາຍ ຂອງ ວັນທີ
-              <span class="font-weight-bold" style="font-weight: bold;color: rgb(245, 101, 6);">
-                {{ initDate | date: 'dd-MMM-yyyy' }}</span>
             </div>
           </div>
           <div class="card-body">
@@ -56,28 +53,27 @@
                   <div>
                     <table class="table table-bordered table-hover" style="margin: 0;">
                       <thead class="thead-light">
-                        <th class="text-center">#</th>
-                        <th class="text-center">ອາຫານ</th>
-                        <th class="text-center">ຈຳນວນ</th>
-                        <th class="text-center">ທຶນ</th>
-                        <th class="text-center">ລວມຕົ້ນທຶນ</th>
+                        <th class="text-center h6">#</th>
+                        <th class="text-center h6">ອາຫານ</th>
+                        <th class="text-center h6">ຈຳນວນ</th>
+                        <th class="text-center h6">ລວມຕົ້ນທຶນ</th>
                       </thead>
                       <tbody>
                         <tr *ngFor="let trx of foodsTransactions ; let i  = index">
                           <td class="text-center">{{ i+1 }}</td>
-                          <td class="text-left text-nowrap" style="width: 300px;">{{ trx.foodname }}</td>
-                          <td class="text-right">{{ trx.foodQuantity |number }}</td>
-                          <td class="text-right">{{ trx.cost   | number }}</td>
-                          <td class="text-right">{{ trx.foodCost   | number }}</td>
+                          <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
+                          <td class="text-right">{{ trx.quantity |number }}</td>
+                          <td class="text-right">{{ trx.total_cost | number }}</td>
+                        </tr>
+                        <tr>
+                          <td class="text-center h6" colspan="3">ລວມ</td>
+                          <td class="text-right h6">{{ grandTotal | number }}</td>
                         </tr>
                       </tbody>
                     </table>
                   </div>
                 </div>
               </div>
-
-
-
             </div>
           </div>
         </div>
