--- a/src/app/pages/kitchen-transactions/kitchen-transactions.component.css
+++ b/src/app/pages/kitchen-transactions/kitchen-transactions.component.css
@@ -2,3 +2,6 @@
   background-image: url('../../../assets/icons/baseline-playlist_add_check-24px.svg');
   background-size: cover;
 }
+.hidden {
+  display: none;
+}
