update food select

--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title class="h4 text-center">ຊຳລະ</mat-card-title>
+  <mat-card-title class="h3 text-center">ຊຳລະເງິນ</mat-card-title>
   <mat-divider></mat-divider>
   <mat-card-content style="margin-top: 20px;">
     <div class="row">
