--- a/src/app/dialogs/view-order-details/view-order-details.component.html
+++ b/src/app/dialogs/view-order-details/view-order-details.component.html
@@ -31,6 +31,12 @@
   <div class="col col-md-3 mb-1" style="font-weight: bold;">
     {{ data.status }}
   </div>
+  <div class="col col-md-3">
+    ເຫດຜົນຍົກເລິກ
+  </div>
+  <div class="col col-md-3 mb-1" style="font-weight: bold;">
+    {{ data.remarks }}
+  </div>
   <mat-divider></mat-divider>
 </div>
 <div>
