update purchase bug

--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -67,7 +67,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="currentQuantity">Vendor</label>
-      <select class="form-control" formControlName="supplierId" required>
+      <select class="form-control" formControlName="vendorId" required>
         <option value="-1" disabled>------</option>
         <option *ngFor="let vendor of suppliers " value="{{ vendor.id }}">{{ vendor.vendorName }}</option>
       </select>
