--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -38,22 +38,23 @@
       <tbody>
         <tr *ngFor="let product of productsShow | product: searchProduct"
           [ngClass]="{'bg-danger': product.currentQuantity == 0 || product.minimumQuantity > product.currentQuantity}">
-          <td class="text-center" (click)="updateProduct(product)" style="cursor: pointer">{{ product.pid }}</td>
-          <td class="text-left">{{ product.barcode }}</td>
-          <td class="text-left">{{ product.product_code }}</td>
-          <td class="text-center" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
+          <td class="text-center align-middle" (click)="updateProduct(product)" style="cursor: pointer">
+            {{ product.pid }}</td>
+          <td class="text-left align-middle">{{ product.barcode }}</td>
+          <td class="text-left align-middle">{{ product.product_code }}</td>
+          <td class="text-center align-middle" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
           <ng-template #nonFoodId>
-            <td class="text-center">N/A</td>
+            <td class="text-center align-middle">N/A</td>
           </ng-template>
-          <td class="text-left">{{ product.product_name }}</td>
-          <td class="text-left">{{ product.category_name }}</td>
-          <td class="text-right">{{ product.cost |number }}</td>
-          <td class="text-center">{{ product.minimum |number }}</td>
-          <td class="text-center">{{ product.currentQuantity |number }}</td>
-          <td class="text-center">{{ product.unit_name }}</td>
-          <td class="text-left">{{ product.supplier_name }}</td>
-          <td class="text-center">{{ product.createdAt |date }}</td>
-          <td class="text-center"><button mat-raised-button color="warn"
+          <td class="text-left align-middle">{{ product.product_name }}</td>
+          <td class="text-left align-middle">{{ product.category_name }}</td>
+          <td class="text-right align-middle">{{ product.cost |number }}</td>
+          <td class="text-center align-middle">{{ product.minimum |number }}</td>
+          <td class="text-center align-middle">{{ product.currentQuantity |number }}</td>
+          <td class="text-center align-middle">{{ product.unit_name }}</td>
+          <td class="text-left align-middle">{{ product.supplier_name }}</td>
+          <td class="text-center align-middle">{{ product.createdAt |date }}</td>
+          <td class="text-center align-middle"><button mat-raised-button color="warn"
               (click)="deleteProduct(product)">Delete</button><span class="spaceDiv"></span><button mat-raised-button
               color="primary" (click)="updateProduct(product)">Update</button></td>
         </tr>
