--- a/src/app/dialogs/add-food/add-food.component.html
+++ b/src/app/dialogs/add-food/add-food.component.html
@@ -64,6 +64,13 @@
           </select>
         </div>
         <div class="form-group col-md-6">
+          <label for="discId">ຈານ</label>
+          <select class="form-control" id="discId" required formControlName="discId">
+            <option value="" disabled>-----------</option>
+            <option *ngFor="let d of discs " value="{{ d.id }}">{{ d.disc_name }}</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
           <label for="note">ໝາຍເຫດ</label>
           <input type="text" class="form-control" id="note" formControlName="note">
         </div>
