--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -66,10 +66,10 @@
       </select>
     </div>
     <div class="form-group col-md-6">
-      <label for="currentQuantity">Vendor</label>
-      <select class="form-control" formControlName="vendorId" required>
+      <label for="supplierId">Supplier</label>
+      <select class="form-control" formControlName="supplierId" required>
         <option value="-1" disabled>------</option>
-        <option *ngFor="let vendor of suppliers " value="{{ vendor.id }}">{{ vendor.vendorName }}</option>
+        <option *ngFor="let vendor of suppliers " value="{{ vendor.id }}">{{ vendor.supplier_name }}</option>
       </select>
     </div>
     <div class="form-group col-md-6">
