--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
     <mat-card-subtitle>Summary all Status</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+    <!--
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <div>
       <div class="row">
@@ -13,7 +14,7 @@
           <div class="card bg-c-blue order-card">
             <div class="card-block">
               <h5 class="m-b-20">ຍອດຂາຍທັງໝົດ</h5>
-              <h5 class="text-right"><i class="fa fa-rocket f-left"></i><span>{{ transactionAmount |number }}</span>
+              <h5 class="text-right"><i class="fa fa-rocket f-left"></i><span></span>
               </h5>
               <p class="m-b-0">ຍອດການຂາຍ<span class="f-right">{{ transactionCount |number }} ລາຍການ</span></p>
             </div>
@@ -66,6 +67,7 @@
         </div>
       </div>
     </div>
+    -->
   </mat-card-content>
 
 </mat-card>
