--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -16,7 +16,8 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
-              <div class="m-b-20 h4">ຍອດຂາຍ ຂອງວັນ {{ currentDate |date: 'dd-MMM-yyyy'}}</div>
+              <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນ {{ currentDate |date: 'dd-MMM-yyyy'}}
+              </div>
               <mat-divider></mat-divider>
               <br />
               <ng-container *ngFor="let summaryReport of summaryReports">
@@ -36,7 +37,7 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
-              <div class="m-b-20 h4">ຍອດຂາຍ ຕາມຄົວ</div>
+              <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຕາມຄົວ</div>
               <mat-divider></mat-divider>
               <br />
               <ng-container *ngFor="let summaryReportsKitchen of summaryReportsKitchens ; let i = index">
@@ -54,7 +55,7 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
-              <div class="m-b-20 h4">ຍອດການຈ່າຍຕາມປະເພດ</div>
+              <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດການຈ່າຍຕາມປະເພດ</div>
               <mat-divider></mat-divider>
               <br />
               <ng-container *ngFor=" let summaryReportsPayment of summaryReportsPayments">
@@ -69,7 +70,7 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
-              <div class="m-b-20 h4">ຍອດການຂາຍຕາມພະນັກງານ</div>
+              <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດການຂາຍຕາມພະນັກງານ</div>
               <mat-divider></mat-divider>
               <br />
               <ng-container *ngFor="let summaryReportsUser of summaryReportsUsers">
@@ -83,7 +84,5 @@
         </div>
       </div>
     </div>
-
   </mat-card-content>
-
 </mat-card>
