--- a/src/app/pages/kitchen-orders/kitchen-orders.component.html
+++ b/src/app/pages/kitchen-orders/kitchen-orders.component.html
@@ -8,7 +8,7 @@
     <mat-divider></mat-divider>
     <div class="row">
       <div class="col col-md-6 col-sm-12" *ngFor="let order of orders |async " [ngClass]="showList">
-        <div class="card mt-2">
+        <div class="card mt-2" *ngIf="order.food.length > 0">
           <div class="card-header text-center h4">
             ລາຍການອາຫານສັ້ງ ເວລາ {{ order.orderDateTime.toDate() | date: 'HH:mm:ss' }}
           </div>
@@ -24,7 +24,7 @@
                     <th class="text-center h6 text-nowrap">ສົ່ງແລ້ວ</th>
                   </thead>
                   <tbody>
-                    <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length +1"
+                    <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length + 1"
                       style="width: 10px;">
                       {{ order.ticket }}</td>
                     <tr *ngFor="let food of order.food">
