--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -8,7 +8,6 @@
     </p>
   </mat-card-header>
   <mat-card-content>
-
     <ng-container *ngIf="roleId == 1">
       <div class="row mainrow">
         <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
@@ -47,6 +46,16 @@
           <img src="../../../assets/icons/app.svg" class="gridImg" (click)="openStaffBenefit()">
           <div class="textTitle h5">Staff Benefits</div>
         </div>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="roleId > 1">
+      <div class="card">
+        <div class="card-body">
+          <div class="text-center display-4" style="color:tomato;">
+            Permission denie! <br />Please contact admin
+          </div>
+        </div>
+
       </div>
     </ng-container>
 
