--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -125,7 +125,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-4 col-sm-12">
+      <div class="col col-md-4 col-sm-12 col-xs-12">
         <div class="card">
           <div class="card-header text-center">
             <span class="text-center h4">ຂໍ້ຄວາມ</span>
